fix cast / creative collapse, add 0 cache for sw.js

--- a/src/stylesheets/base/_type.scss
+++ b/src/stylesheets/base/_type.scss
@@ -33,6 +33,10 @@ strong {
     font-size: $font-size-sm;
 }
 
+.text-xs {
+    font-size: $font-size-sm * .92;
+}
+
 .text-lg {
     font-size: $font-size-lg;
 }
